changed home cto, added some final variables in meeting repo and student controller, still trying to figure out the latest meetings func